# customer_spport_maf

./: .env  .env.example  README.md  REQUIREMENTS.md  main.py  pyproject.toml  quickstart.sh
Backend/: backend.py
Frontend/: app.py
MCP/: mcp_server.py
scripts/: create_db_csv.py
